tests/fixtures/validate/strict/invalid/strict-invalid-multiple-root-sections-1.yini
^ App
title = "My App"

^ Logging   // ERROR: second top-level section; strict mode requires exactly one explicit top-level section
level = "info"

/END
